Dev/1.9.0/refactoring (#11)
* update haxelib description

* Haxelib build tasks (#6)

* Fix issue where Hashlink debugger was unable to resume from breakpoint (#7)

* Adding support for Navigation to FQN from variable view when debugging

* Using intellijs Browser selector for Browser debugger

* Fix test after refactoring

* Dev/hl debugger fixes (#8)

* HL: show an interface-typed value as the instance it wraps

An interface-typed variable rendered as a structural member list with no
values ("label = ?", "describe = function @ 0x0"), and every class
implementing an interface showed an extra unnamed field beside its own.

genhl gives such a class one EMPTY-NAMED HVirtual field per interface -
the runtime cache for that interface view (hl_to_virtual), emitted
whether or not the program ever casts. A vvirtual is {t, value, next}
followed by one slot per member, and the slot means three different
things: a data field's slot holds the field's ADDRESS inside the wrapped
object, a method's slot holds the function's CODE pointer, and an
accessor-backed property has none (null). Reading all three as "address
of a value" is what dereferenced jit code into "function @ 0x0"; the
data fields decoded correctly all along.

An interface view is therefore a poor thing to show structurally - its
members are mostly properties and methods, which carry no data. When
vvirtual.value is non-null the virtual now resolves to the INSTANCE:
real field values, and the class name drives source navigation. A
standalone virtual (an anonymous structure, value null, slots pointing
into its own data) keeps the member-list rendering, as does an
unresolvable runtime class. The cache field is hidden for DISPLAY only -
the layout must keep it or every field after it lands at the wrong
offset. Method slots are named rather than dereferenced on the fallback
path, and are refused as setVariable targets: writing through one would
patch the jit.

Slot semantics captured live against a new Iface.hx fixture (